--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div>
 						<p class="message mb-8 flex justify-center md:justify-start">Start guessing...</p>
 						<p class="flex justify-center md:justify-start">🎰 Score: <span class="score">?</span></p>
-						<p class="flex justify-center md:justify-start">🏆 Highscore: <span class="highscore">?</span></p>
+						<p class="flex justify-center md:justify-start">🏆 High Score: <span class="highScore">?</span></p>
 					</div>
 				</div>
 			</main>
